Update Day 2 Reading Notes

--- a/code-401/2.md
+++ b/code-401/2.md
@@ -67,6 +67,10 @@ Essentially where your code ends up being deployed to. Test/Staging environment 
 
 Github allows developers to have their changes all come together into one place without constant coordination or waiting on someone to finish their portion of the project. It also allows them to perform testing and double-check that everything is good to go before sending the code off to actual production.
 
+> What are your learning goals after reading and reviewing the class README?
+
+I learned the basics of Express in 301, but I want to know a bit more about the methods available to us in Express. Things like send(), next(), and the various middleware functions that are available for use.
+
 ## Things I want to know more about
 
 I often see mention of CI/CD tools when looking into software positions. Are there more tools than just Github and PaaS deployments involved in the industry?
